Spacing fixes

--- a/css/work.css
+++ b/css/work.css
@@ -767,7 +767,7 @@ hr {
 }
 
 .hero-section{
-  padding: 80px 0px;
+  padding: 64px 0px;
   background: var(--color-bg-section);
   backdrop-filter: blur(30px) saturate(180%);
   -webkit-backdrop-filter: blur(30px) saturate(180%);
@@ -1291,6 +1291,10 @@ color: var(--color-content-default);
     font-size: 8rem;
   }
 
+    .hero-section{
+  padding: 48px 0px;
+}
+
   .full-width-image img {
     width: 80vw;
     height: auto;
@@ -1362,7 +1366,9 @@ color: var(--color-content-default);
 
 @media only screen and (max-width: 576px) {
   h1 {
-    font-size: 5rem;
-    line-height: 1;
+    font-size: 6rem;
   }
+  .hero-section{
+  padding: 32px 0px;
+}
 }
